--- a/LightingServiceTracker/LightingServiceTracker.csproj
+++ b/LightingServiceTracker/LightingServiceTracker.csproj
@@ -15,6 +15,10 @@
     <OutputPath>E:\projects\LightingServiceTracker\bin</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>E:\projects\LightingServiceTracker\bin\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
